Exercício de fixação sobre propriedades de texto no CSS

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -7,14 +7,40 @@
             h1 {
                 font-size: 65px;
                 color: orange;
+                font-family: sans-serif;
             }
 
             ul {
                 background-color: rgb (255, 100, 400);
+                line-height: 30px;
+                font-style: italic;
+                text-align: center;
+                text-decoration: line-through;
             }
 
             .cor-fundo {
                 background-color: blueviolet;
+            }
+            
+            p {
+                font-weight: 600;
+                font-size: 3em;
+            }
+
+            body {
+                font-size: 16px;
+            }
+
+            #yellow {
+                background-color: yellow;
+            }
+
+            #red {
+                background-color: red;
+            }
+
+            #brown {
+                background-color: brown;
             }
         </style>
     </head>
@@ -22,9 +48,9 @@
         <h1>Exercícios 3.2</h1>
         <p class="cor-fundo">Qual é a sua cor favorita?</p>
         <ul class="cor-fundo">
-            <li>Amarelo</li>
-            <li>Vermelho</li>
-            <li>Marrom</li>
+            <li id="yellow">Amarelo</li>
+            <li id="red">Vermelho</li>
+            <li id="brown">Marrom</li>
         </ul>
     </body>
 </html>
