Mudanças na tag style

--- a/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
+++ b/fundamentos/bloco-03-introducao-a-html-e-css/dia-2-html-css-primeiros-passos-em-css/index.html
@@ -4,46 +4,7 @@
         <meta charset="UTF-8">
         <title>HTML</title>
         <link rel="stylesheet" type="text/css" href="style.css">
-        <style>
-            /*h1 {
-                font-size: 65px;
-                color: orange;
-                font-family: sans-serif;
-            }
-
-            ul {
-                background-color: rgb (255, 100, 400);
-                line-height: 30px;
-                font-style: italic;
-                text-align: center;
-                text-decoration: line-through;
-            }
-
-            .cor-fundo {
-                background-color: blueviolet;
-            }
-            
-            p {
-                font-weight: 600;
-                font-size: 3em;
-            }
-
-            body {
-                font-size: 16px;
-            }
-
-            #yellow {
-                background-color: yellow;
-            }
-
-            #red {
-                background-color: red;
-            }
-
-            #brown {
-                background-color: brown;
-            }*/
-        </style>
+        <style></style>
     </head>
     <body>
         <h1>Exercícios 3.2</h1>
